<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deleteQuestionADLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/focusedBackground">

    <TextView
        android:id="@+id/deleteQuestionADTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/you_are_about_to_delete_a_question"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteQuestionADOKButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/deleteQuestionADTV"
        app:layout_constraintTop_toBottomOf="@+id/deleteQuestionADTV" />

    <Button
        android:id="@+id/deleteQuestionADCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/deleteQuestionADOKButton"
        app:layout_constraintTop_toTopOf="@+id/deleteQuestionADOKButton" />
</androidx.constraintlayout.widget.ConstraintLayout>