<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="@+id/userPasswordET"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordET" />

    <EditText
        android:id="@+id/usermailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:ems="10"
        android:hint="@string/example_mail"
        android:inputType="textPersonName"
        android:nextFocusLeft="@id/userPasswordET"
        android:nextFocusRight="@id/userPasswordET"
        android:nextFocusDown="@id/userPasswordET"
        android:nextFocusForward="@id/userPasswordET"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userPasswordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:nextFocusLeft="@id/usermailET"
        android:nextFocusRight="@id/usermailET"
        android:nextFocusDown="@id/usermailET"
        android:nextFocusForward="@id/usermailET"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/usermailET"
        app:layout_constraintStart_toStartOf="@+id/usermailET"
        app:layout_constraintTop_toBottomOf="@+id/usermailET" />

    <Button
        android:id="@+id/singupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordET" />
</androidx.constraintlayout.widget.ConstraintLayout>