<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".MainScreen"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background=" #FF9900">

        <Button
            android:id="@+id/user_info_button"
            android:layout_width="111dp"
            android:layout_height="38dp"
            android:layout_gravity="top|left"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FF9900"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:layout_marginLeft="10dp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/main_ui_options_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_tall_divider"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/add_new_question_to_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_background"
                android:text="@string/create_new_question"
                android:textColor="@color/design_default_color_background" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/list_questions_main_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_background"
                android:text="@string/list_all_questions"
                android:textColor="@color/design_default_color_background" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/exam_setting_main_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_background"
                android:text="@string/change_exam_settings"
                android:textColor="@color/design_default_color_background" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/create_new_exam_to_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_background"
                android:text="@string/create_new_exam"
                android:textColor="@color/design_default_color_background" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>